jdk 21, gradle 8.5, ktor 2.3.7, kotlin 1.9.22
